# cmdorc

./: CHANGELOG.md  CLAUDE.md  README.md  architecture.md  breadcrumb.md  classes.md  command_config.md  comparisons.md  new.md  overview.md  pyproject.toml  telemetry.md  triggers.md  use_cases.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: architecture.md  extensions.md  marketing.md  monetizing.md
examples/: README.md
examples/advanced/: 01_callbacks_and_hooks.py  02_error_handling.py  03_concurrency_policies.py  04_custom_executor.py  04_trigger_chains.py  05_cycle_detection.py  06_logging_setup.py
examples/basic/: 01_hello_world.py  02_simple_workflow.py  04_runtime_variables.py  05_status_and_history.py
examples/basic/03_toml_config/: config.toml  run.py
examples/file_watching/: hot_reload.py  simple_watcher.py
examples/file_watching/auto_tester/: config.toml  watcher.py
examples/workflows/: git_hooks.py
examples/workflows/ci_pipeline/: ci.toml  ci_runner.py
examples/workflows/python_project/: dev_workflow.py
src/: local_subprocess_executor.py  mock_executor.py
src/cmdorc/: __init__.py  command_config.py  command_executor.py  command_orchestrator.py  command_runner.py  command_runtime.py  command_status.py  concurrency_policy.py  exceptions.py  execution_policy.py  history_loader.py  load_config.py  local_subprocess_executor.py  logging_config.py  metadata_parser.py  mock_executor.py  run_handle.py  run_result.py  runner_config.py  runtime_vars.py  types.py
tests/: conftest.py  test_command_config.py  test_command_executor.py  test_command_orchestrator.py  test_command_runner.py  test_command_runner_phase2.py  test_command_runtime.py  test_exceptions.py  test_execution_policy.py  test_history_loader.py  test_load_config.py  test_logging_config.py  test_metadata_parser.py  test_output_storage.py  test_resolve_variables.py  test_run_handle.py  test_run_result.py  test_runner_config.py  test_runtime_vars.py  test_trigger_engine.py
tests/archive/: conftest.py  test_command_config.py  test_runner_config.py
tests/archive/test_command_runner/: conftest.py  test_cancellation.py  test_coverage_improvements.py  test_edge_cases.py  test_history.py  test_run_command.py  test_status_and_queries.py
tests/test_command_runner/: conftest.py  test_callbacks.py  test_cancellation.py  test_concurrency.py  test_coverage_improvements.py  test_edge_cases.py  test_error_handling.py  test_final_coverage_gaps.py  test_history.py  test_run_command.py  test_status_and_queries.py  test_templates.py  test_trigger_basics.py
