[project]
name = "cmdorc"
version = "0.1.0"
description = "Lightweight, async-first command orchestrator using trigger strings."
readme = "README.md"
authors = [{name = "eyecantell", email = "paul@pneuma.solutions"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
]
keywords = [
    "command line",
    "orchestration",
]
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]

[project.urls]
Repository = "https://github.com/eyecantell/cmdorc"
Issues = "https://github.com/eyecantell/cmdorc/issues"
Documentation = "https://github.com/eyecantell/cmdorc#readme"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "src"
includes = ["src/cmdorc"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "T20", # flake8-print
]
ignore = [
    "E501", # Line length handled by ruff formatter
]

[tool.pytest.ini_options]
addopts = "--cov=src/cmdorc --cov-report=term-missing --cov-report=html -v"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["asyncio: mark test as async"]