[project]
name = "cmdorc"
version = "0.8.0"
description = "Async-first, trigger-driven shell command orchestrator for TUIs and agents"
readme = "README.md"
authors = [{ name = "eyecantell", email = "paul@pneuma.solutions" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "async",
  "orchestration",
  "tui",
  "command-runner",
  "automation",
  "triggers",
  "devtools",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
]

dependencies = [
  # tomli only needed on <3.11 - stdlib has tomllib
  'tomli>=2.3.0; python_version<"3.11"'
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
]
examples = [
    "watchdog>=3.0.0",      # File system monitoring for file watching examples
    "textual>=0.47.0",      # TUI framework for interactive examples
    "rich>=13.0.0",         # Rich text formatting for TUI examples
]

[project.urls]
Homepage = "https://github.com/eyecantell/cmdorc"
Repository = "https://github.com/eyecantell/cmdorc"
Issues = "https://github.com/eyecantell/cmdorc/issues"
Documentation = "https://github.com/eyecantell/cmdorc#readme"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
source-includes = ["tests/", "src/cmdorc/", "CHANGELOG.md"]
package-dir = "src"
distribution = true

[tool.pdm.dev-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
]

[tool.pdm.build]
excludes = [
    "**/.coverage",
    "**/__pycache__",
    "**/*.pyc",
    "**/.pytest_cache",
    ".claude/",
    "htmlcov/",
    ".ruff_cache/",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "T20", "UP"]
ignore = ["E501", "T201"]  # Let formatter handle line length, allow print statements

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
addopts = "-ra -v --cov=cmdorc --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "asyncio: mark test as async",
]
[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
